layout bugfix

--- a/src/stylesheets/SqsLayoutManager.scss
+++ b/src/stylesheets/SqsLayoutManager.scss
@@ -125,7 +125,7 @@ body.resizing {
     justify-content: center;
     font-size: 1.2em;
     cursor: pointer;
-    z-index: 2;
+    z-index: 1;
     padding-top: 0em;
     padding-bottom: 0em;
 }
